# stegoplot

./: .gitignore  LICENSE  README.md  pyproject.toml
stego_Rx/: Plot.py  dedos.py  kinetics.py  parameters.py  promps.py  thermo_base.py
stego_Rx/item_types/: __init__.py  items_adsorbed.py  items_base.py  items_clean.py  items_gas.py
stego_Rx/tools/: InertiaMoment.py  __init__.py  vib2rotT.py
stegoplot/: Plot.py  kinetics.py  parameters.py  promps.py  thermo_base.py
stegoplot/item_types/: __init__.py  items_adsorbed.py  items_base.py  items_clean.py  items_gas.py
stegoplot/tools/: InertiaMoment.py  __init__.py  convert.py
test/: Shomate_Equation.ipynb  Simple_reaction_profile.ipynb
test/.ipynb_checkpoints/: BasicInput-checkpoint.ipynb
test/DOS/: DOS_CO2_disc_test.py  VerticalDOS.py
test/DOS/DOS/: DOSCAR_N10_final  DOSCAR_N10_initial
test/Gas_phase_thermo_________________done/: Databin.py  Fitting_rx_energy.py  Fitting_rx_energy_side.py
test/Inertia_Moment____________________done/: CONTCAR  test_inertia_moment.py
test/RxPaths_CHx/: RxPath_CHx_adsH2_Full.py  RxPath_CxOyHz_Databin.py
test/RxPaths_CxOyHz_clean/: CO_Path_Gibbs_NiCo111.py  RxPath_CxOyHz_Databin.py
test/Rx_test/: Databin.py  RxPath_single_test.py  RxTest.py
test/Surface_Cx/: DataBin.py
test/ThermoTests/: Databin.py
