[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "stego_Rx"
version = "0.0.1"
authors = [
  { name="Sebastian Godoy Gutierrez", email="sebadgogu@gmail.com" },
]
description = "DFT procesing tools"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Visualization",
]

[project.urls]
"Homepage" = "https://github.com/sebagodoy/stego"
"Bug Tracker" = "https://github.com/sebagodoy/stego/issues"
